# MBU_Ikke_Meddelte_Aftaler_Solteq_Tand

./: .gitignore  @AutomationLog.txt  README.md  pyproject.toml
robot_framework/: __main__.py  config.py  exceptions.py  finalize.py  initialize.py  linear_framework.py  process.py  queue_framework.py  reset.py
robot_framework/subprocesses/: call_database.py  check_patient.py  generate_queue.py  handle_manual_list.py  handle_queue.py
