[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbu-ikke-meddelte-aftaler"
version = "0.0.9"
authors = [
  { name="MBU RPA", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "itk-dev-shared-components>=2.9.0",
    "mbu-dev-shared-components>=0.4.2",
    "OpenOrchestrator == 1.*",
    "pandas>=2.2.3",
    "Pillow == 10.*",
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
